margin fixes on mobile ver and small different fixes

--- a/css/patient.css
+++ b/css/patient.css
@@ -94,6 +94,15 @@ a {
   margin-bottom: 100px;
 }
 
-.custom-file {
-  max-width: 500px;
+@media screen and (max-width: 1000px) {
+  .main-section-container {
+    padding-top: 200px;
+    padding-bottom: 100px;
+    margin-right: 25px;
+    margin-left: 25px;
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
